--- a/.github/workflowTypes/08-add-unit-test.yaml
+++ b/.github/workflowTypes/08-add-unit-test.yaml
@@ -1,5 +1,5 @@
 ---
-name: 09 Build and Integration Test
+name: 08 Build and Unit Test
 
 on:
   push:
@@ -11,15 +11,8 @@ jobs:
   build-image:
     name: Build Images
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-
     steps:
 
-      - name: Checkout git repo
-        uses: actions/checkout@v4
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -33,6 +26,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+#NEW: (START) ##########################################################
       - name: Build and export to Docker
         uses: docker/build-push-action@v5
         with:
@@ -43,50 +37,22 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
-          
-      - name: Run Trivy for all CVEs (non-blocking)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ github.run_id }}
-          format: table 
-          exit-code: 0
 
-      - name: Run Trivy for HIGH,CRITICAL CVEs and report (blocking)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ github.run_id }}
-          exit-code: 1
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'HIGH,CRITICAL'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-      
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-#NEW: (START) ############################################################  
-        # for more advanced tests, use docker compose with `depends_on`
-          # NOTE: GHA and other CIs can also run dependency containers on their own
-          # GHA `services:` can do this if you're trying to avoid docker compose
-      - name: Test healthcheck in Docker Compose
+        # for simple tests (npm test, etc.) just run a local image in docker
+      - name: Unit Testing in Docker
         run: |
-          export TESTING_IMAGE="${{ github.run_id }}"
-          docker compose -f docker-compose.test.yml up --exit-code-from sut
-#NEW: (END) ############################################################  
-
+          docker run --rm ${{ github.run_id }} echo "run test commands here"
+#NEW: (END) ############################################################
 
       - name: Docker Metadata for Final Image Build
         id: docker_meta
         uses: docker/metadata-action@v5
         with:
-          images: ballen19/docker-ci-automation
+          images: bretfisher/docker-ci-automation
           flavor: |
             latest=false
           tags: |
-            type=raw,value=09
+            type=raw,value=08
           # comment these out on all but 04-add-metadata.yaml to avoid overwriting image tags
           # type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
           # type=ref,event=pr
