--- a/.github/workflowTypes/10-add-k8s-test.yaml
+++ b/.github/workflowTypes/10-add-k8s-test.yaml
@@ -1,5 +1,5 @@
 ---
-name: 09 Build and Integration Test
+name: 10 Build and Smoke Test
 
 on:
   push:
@@ -14,8 +14,6 @@ jobs:
 
     permissions:
       packages: write # needed to push docker image to ghcr.io
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
 
     steps:
 
@@ -34,50 +32,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v5
-        with:
-          push: false
-          load: true # Export to Docker Engine rather than pushing to a registry
-          tags: ${{ github.run_id }}
-          target: test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64
-          
-      - name: Run Trivy for all CVEs (non-blocking)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ github.run_id }}
-          format: table 
-          exit-code: 0
-
-      # - name: Run Trivy for HIGH,CRITICAL CVEs and report (blocking)
-      #   uses: aquasecurity/trivy-action@master
-      #   with:
-      #     image-ref: ${{ github.run_id }}
-      #     exit-code: 1
-      #     ignore-unfixed: true
-      #     vuln-type: 'os,library'
-      #     severity: 'HIGH,CRITICAL'
-      #     format: 'sarif'
-      #     output: 'trivy-results.sarif'
-      
-      # - name: Upload Trivy scan results to GitHub Security tab
-      #   uses: github/codeql-action/upload-sarif@v2
-      #   if: always()
-      #   with:
-      #     sarif_file: 'trivy-results.sarif'
-#NEW: (START) ############################################################  
-        # for more advanced tests, use docker compose with `depends_on`
-          # NOTE: GHA and other CIs can also run dependency containers on their own
-          # GHA `services:` can do this if you're trying to avoid docker compose
-      - name: Test healthcheck in Docker Compose
-        run: |
-          export TESTING_IMAGE="${{ github.run_id }}"
-          docker compose -f docker-compose.test.yml up --exit-code-from sut
-#NEW: (END) ############################################################  
-
+#NEW: (START) ############################################################
       - name: Login to ghcr.io registry
         uses: docker/login-action@v3
         with:
@@ -89,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/Ballen2713/docker-ci-automation:${{ github.run_id }}
+          tags: ghcr.io/bretfisher/docker-ci-automation:${{ github.run_id }}
           target: test
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -113,16 +68,17 @@ jobs:
           envsubst < manifests/deployment.yaml  | kubectl apply -f -
           kubectl rollout status deployment myapp
           kubectl exec deploy/myapp -- curl --fail localhost
+#NEW: (END) ############################################################  
 
       - name: Docker Metadata for Final Image Build
         id: docker_meta
         uses: docker/metadata-action@v5
         with:
-          images: ballen19/docker-ci-automation
+          images: bretfisher/docker-ci-automation,ghcr.io/bretfisher/docker-ci-automation
           flavor: |
             latest=false
           tags: |
-            type=raw,value=09
+            type=raw,value=10
           # comment these out on all but 04-add-metadata.yaml to avoid overwriting image tags
           # type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
           # type=ref,event=pr
